--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # .env
 NEXT_PUBLIC_GOOGLE_CLIENT_ID="1057524497428-2v0rc83ou386nlvv53ubsq0km4md06bo.apps.googleusercontent.com"
+NEXT_PUBLIC_API_URL="https://localhost:7057/api"
