--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.11.9",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.453.0",
